--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.6.8",
     "react": "18.2.0",
+    "react-cookie": "^7.1.0",
+    "react-hook-form": "^7.51.1",
     "react-native": "0.73.5",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
+    "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
